@@ -1,3 +1,8 @@
+2004-03-27  Murray Cumming  <murrayc@murrayc.com>
+
+	* libxml++/parsers/textreader.[h|cc]: Correct constness of 
+	get_current_node(), so there is a const and non-const version.
+
 2.5.2:
 
 2004-02-16  Christophe de VIENNE  <cdevienne@netcourrier.com>
